--- a/templates/Notes/addNotesInstitute.html
+++ b/templates/Notes/addNotesInstitute.html
@@ -316,14 +316,15 @@ input:focus{
                     <div class="row ml-1">
                         <div class="col-3">
                            <div class="input-group form-group">
-                                <label class="control-label">Select Course</label>        
+                                <label class="control-label">Select Class</label>        
                             </div>  
                         </div>
-                        <div class="col">
+                    <div class="col">
                                <div>
-                                <select class="form-control" id="select_course" name="course" required onchange="selectcourse()">
-                                    {% for course in courses %}
-                                    <option value="{{course.id}}">{{course.courseName}}</option>
+                                <select class="form-control" id="class_select" name="forclass" onchange="selectclass()" required>
+                                    <option selected disabled>Select Class</option>
+                                    {% for class in classes %}
+                                    <option value="{{class.0}}">{{class.0}}</option>
                                     {% endfor %}
                                 </select>
                                 </div>
@@ -333,13 +334,13 @@ input:focus{
                     <div class="row ml-1">
                         <div class="col-3">
                            <div class="input-group form-group">
-                                <label class="control-label">Select Class</label>        
+                                <label class="control-label">Select Course</label>        
                             </div>  
                         </div>
-                    <div class="col">
+                        <div class="col">
                                <div>
-                                <select class="form-control" id="class_select" name="forclass" required>
-                                    <option selected disabled>Select Class</option>
+                                <select class="form-control" id="select_course" name="course" required>
+                                    <option selected disabled value="">Select Course</option>
                                 </select>
                                 </div>
                         </div>                      
@@ -377,25 +378,24 @@ input:focus{
     });
 </script>
 <script>
-    function selectcourse() {
-    var selected = $('#select_course').val();
-    console.log(selected)
+    function selectclass() {
+    var selected = $("#class_select").val();
     $.ajax({
-      url: "{% url 'classes' %}",
+      url: "{% url 'findCourse' %}",
       data: {
-        course_id: selected,
+        forclass: selected,
       },
       success: function (data) {
-        categories = data.sub_categories;
-        $("#class_select").empty().trigger("change");
-        for (i = 0; i < categories.length; i++) {
+        courses = data.courses;
+        $("#select_course").empty().trigger("change");
+        for (i = 0; i < courses.length; i++) {
           var newOption = new Option(
-            categories[i].text,
-            categories[i].value,
+            courses[i][1],
+            courses[i][0],
             false,
             false
           );
-          $("#class_select").append(newOption).trigger("change");
+          $("#select_course").append(newOption).trigger("change");
         }
       },
     });
