--- a/templates/students/searchUserStudent.html
+++ b/templates/students/searchUserStudent.html
@@ -32,7 +32,7 @@
     color: #00C851; 
 }
 {% endblock %}
-{% block body %}
+{% block main-content %}
         <div class="container mt-4">
         {% if messages %}
         {% for k in messages%}
