--- a/templates/courses-2/teaching-type.html
+++ b/templates/courses-2/teaching-type.html
@@ -279,8 +279,8 @@ Institute Dashboard
                     <td>
                       {{ forloop.counter }}
                     </td>
-                    <td>{{i.course}}</td>
-                    <td>{{ i.forclass }}</td>
+                    <td>{{i.course.courseName}}</td>
+                    <td>{{ i.course.forclass }}</td>
                     <td>Online</td>
                     <td>{{i.duration}}</td>
                     <td>{{i.timePeriod}}</td>
