--- a/templates/courses-2/courses.html
+++ b/templates/courses-2/courses.html
@@ -123,7 +123,7 @@ Institute Dashboard
   </div>
   {% endfor %}
 
-  <br>
+  
   <br>
 
   <div class="row layout-spacing ">
@@ -192,11 +192,11 @@ Institute Dashboard
 
 <div class="row layout-spacing">
 
-  <div class="col-xl-12 col-lg-12 col-sm-12  layout-spacing">
+  <div class="col-xl-12 col-lg-12 col-sm-10  layout-spacing">
     <div class="statbox widget box box-shadow">
       <div class="widget-header">
         <div class="row">
-          <div class="col-xl-12 col-md-12 col-sm-12 col-12">
+          <div class="col-lg-12 col-md-12 cms-search">
             <h4>Courses</h4>
           </div>
         </div>
